tests/ui/traits/const-traits/ice-121536-const-method.stderr
error[E0379]: functions in trait impls cannot be declared const
  --> $DIR/ice-121536-const-method.rs:11:5
   |
LL |     const fn add(self) -> Vec3 {
   |     ^^^^^ functions in trait impls cannot be const
   |
help: remove the `const` ...
   |
LL -     const fn add(self) -> Vec3 {
LL +     fn add(self) -> Vec3 {
   |
help: ... and declare the impl to be const instead
   |
LL | impl const Add for Vec3 {
   |      +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0379`.
